k8s/db_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vw-db
  labels:
    app: vw-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vw-db
  template:
    metadata:
      labels:
        app: vw-db
    spec:
      containers:
      - name: vw-db
        image: mariadb
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db-pvc
