k8s/db_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vw-db
  labels:
    app: vw-db
spec:
  serviceName: vw-db-headless
  replicas: 1
  selector:
    matchLabels:
      app: vw-db
  template:
    metadata:
      labels:
        app: vw-db
    spec:
      containers:
      - name: vw-db
        image: mariadb:latest
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 2Gi
