k8s/vwapp_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vwapp
  labels:
    app: vwapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vwapp
  template:
    metadata:
      labels:
        app: vwapp
    spec:
      containers:
      - name: vwapp
        image: vaultwarden/server:latest
        volumeMounts:
        - name: vwapp-data
          mountPath: /data
      volumes:
      - name: vwapp-data
        persistentVolumeClaim:
          claimName: vwapp-pvc
