k8s/db-headless_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vw-db-headless
spec:
  clusterIP: None
  selector:
    app: vw-db
  ports:
  - port: 3306
