k8s/db_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vwdb-service
  labels:
    app: vw-db
spec:
  selector:
    app: vw-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
