k8s/vwapp_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vwapp-service
  labels:
    app: vwapp
spec:
  type: NodePort
  selector:
    app: vwapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
